# evolution_simulator

./: .gitignore  Cargo.toml
bench/: my_benchmarks.rs
scripts/: create_video.sh  every_n_frame.sh
src/: cell.rs  constants.rs  environment.rs  main.rs
src/old/: main.rs
src/utils/: log_util.rs  logging.rs  math_util.rs  mod.rs  ui_util.rs
