[package]
name = "evolution_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34", default-features = false, features = ["gfx"] }
rand = "0.8.4"
rand_distr = "0.4"
rayon = "1.5.1"
num-format = "0.4"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"